cabal-version:      2.4
name:               unSnake
version:            0.1.0.0
synopsis:           A forgiving twist on the classic Snake game.
maintainer:         bohadi@protonmail.com
category:           Web
extra-source-files: README.md

executable unsnake
    hs-source-dirs:   src
    main-is:          Main.hs
    other-modules:    Snake, UI

    ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N
    default-language: Haskell2010
    build-depends:    base >= 4.7 && < 5
          , brick
          , containers
          , extra
          , linear
          , lens
          , random
          , transformers
          , vty
